# benchmark

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: __init__.py  bench.py  bench_old.py  cli.py  core.py  runner.py  utils.py
scripts/: audit.py  audit_code.py
tests/: __init__.py  test_bench.py  test_bench_main.py  test_cli.py  test_core.py  test_runner.py  test_utils.py
